--- a/templates/users/bar.html
+++ b/templates/users/bar.html
@@ -1,7 +1,1 @@
-{% if messages %}
-  <ul class=flashes>
-  {% for category, message in messages %}
-    <li class="{{ category }}">{{ message }}</li>
-  {% endfor %}
-  </ul>
-{% endif %}
+<div>Hello, user!</div>
